# serverwiz

./: .gitignore  README.md
.github/workflows/: docs.yaml
docs/: docusaurus.config.ts
docs/docs/: introduction.md
docs/docs/system/: constraints.md  functional_requirements.md  non_functional_requirements.md
docs/reports/: 2025-11-29-test-report.md
serverwiz/: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  docker-compose.yaml
serverwiz/src/: cli.rs  lib.rs  main.rs
